Some fixes and cleanup
- Avoid HLL dependency in pinot-spi
- Simplify byte size computation for HLL
- Fix the table config validation logic. We allow type mismatch as long as it can be converted (e.g. numbers are compatible)
- Cleanup and reformat